Fix locator WCAG contrast issues (#626)
The locator WCAG contrast issues by darkening the shade of grey

The default grey colors are fine against a white background, but since Product requested a grey background, the text doesn't meet the WCAG contrast ratio standard. Darken these values so that they pass the WCAG contrast test.

Note: Some of the other colors on the page don't pass the contrast test, but those aren't locator-specific so they are not addressed here

J=1059
TEST=manual

Run the WAVE evaluation tool and see that the locator colors pass the contrast tests

--- a/static/scss/answers/interactive-map/InteractiveMap.scss
+++ b/static/scss/answers/interactive-map/InteractiveMap.scss
@@ -12,6 +12,8 @@
 
   $border-default: 1px solid #666 !default;
 
+  $locator-text-gray: #737373;
+
   position: relative;
   display: flex;
   flex-direction: column;
@@ -242,7 +244,7 @@
       display: flex;
       align-items: center;
       border-top: var(--yxt-border-default);
-      color: var(--yxt-locationBias-text-color);
+      color: $locator-text-gray;
 
       &--desktop {
         display: none;
@@ -354,6 +356,7 @@
         border-top: var(--yxt-border-default);
         padding-left: 16px;
         padding-right: 16px;
+        color: $locator-text-gray;
 
         @include bplte($mobile-break-point-max) {
           height: 60px;
@@ -569,6 +572,10 @@
         }
       }
     }
+  }
+
+  .yxt-VerticalResultsCount {
+    color: $locator-text-gray;
   }
   
   &.CollapsibleFilters .Answers-resultsHeader {
